<resources>
    <string name="app_name">Family Map</string>
    <string name="login_dummy">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="empty_email_error_message">Email cannot be blank</string>
    <string name="invalid_email_error_message">Please Enter a valid email address</string>
    <string name="empty_password_error_message">Password cannot be empty</string>
    <string name="name_error_message">Name cannot be empty</string>
    <string name="login_failure">Login failed</string>
    <string name="about">About FamilyApp</string>
...
