...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input_border_bottom"
...
                android:layout_margin="15dp"
                android:padding="10dp"
                android:text="@string/login"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnServerRegisterLink"
                style="@style/Button.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:padding="10dp"
...
