...
                android:layout_margin="15dp"
                android:padding="10dp"
                android:text="@string/register"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnServerLoginLink"
                style="@style/Button.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:padding="0dp"
...
